# mouse-wobbler

./: .gitignore  Cargo.toml  README.md  gen_icon.py  main.py
.cargo/: config.toml
.claude/file-memory.db/: 000007.ldb  LOG  LOG.old  MANIFEST-000006
.github/workflows/: release.yml
core/: Cargo.toml
core/src/: lib.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  wallpaper.rs
ui/: curtain.html  curtain.js  index.html  main.js  styles.css
