[package]
name = "mouse-wobbler"
version = "0.2.1"
description = "Mouse Wobbler – keep your session alive"
authors = []
edition = "2021"

[lib]
name = "mouse_wobbler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
mouse-wobbler-core = { path = "../core" }
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
serde_json = "1"
argon2 = { version = "0.5", features = ["std"] }
enigo = { version = "0.2", default-features = true }

# Windows-only: pin the privacy curtain to all virtual desktops. Windows has no
# public API for this, so winvd wraps the undocumented shell internals. The
# `windows` crate is pinned to the major version winvd uses (0.58) so the HWND
# type matches when bridging from Tauri's handle.
[target.'cfg(windows)'.dependencies]
winvd = "0.0.49"
windows = { version = "0.58", features = ["Win32_Foundation"] }
